guestbook/guestbook-ui-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: guestbook-ui
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
        name: guestbook-ui
        ports:
        - containerPort: 80
  strategy:
       blueGreen:
         activeService: guestbook-ui
         previewService: guestbook-ui-preview
         autoPromotionEnabled: false
  #     canary: 
  #       steps:
  #       - setWeight: 20
  #       - pause: {}
