guestbook/guestbook-ui-srv-preview.yml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-preview
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
