guestbook/guestbook-ui-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook-ui
  namespace: guestbook
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /guestbook(/|$)(.*)
        backend:
          serviceName: guestbook-ui
          servicePort: http
